--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-/*
-
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
+.modal-footer {
+    position: sticky;
+    bottom: 0;
+    padding: 0.5em;
+    display: flex;
+    justify-content: flex-end;
+    gap: 0.5em;
+}
